[project]
name = "world-builder"
version = "0.1.0"
description = "A local-first character and story continuity companion."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.16,<2",
    "pillow>=11,<13",
    "pydantic>=2.11,<3",
    "sqlalchemy>=2.0,<3",
    "streamlit>=1.45,<2",
]

[project.scripts]
world-builder = "world_builder.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.15,<2",
    "pytest>=8.3,<10",
    "ruff>=0.11,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/world_builder"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
